2012-07-29  Hannes Weisbach <hannes_weisbach@gmx.net>

	* avrftdi.c: bugfixes (synchronisation) and maintenance (paged programming,
	nicer output, separation of parameter checking and actual code)

2012-07-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtagmkII.c (jtagmkII_memtype): return MTYPE_FLASH rather than
	MTYPE_SPM for non-Xmega flash regions

2012-07-20 Hannes Weisbach <hannes_weisbach@gmx.net>

	* avrpart.c, avrpart.h: adds avr_pin_name()

2012-07-18  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: check for libelf.h also in libelf/
	* fileio.c: include <libelf/libelf.h> if configure found this
	to be the case

2012-06-13  Rene Liebscher <R.Liebscher@gmx.de>

	* configure.ac: Check for presence of <pthread.h>
	* ft245r.c: Depend on HAVE_PTHREAD_H
	* Makefile.am: Add -lpthread if needed.

2012-06-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* usbtiny.c (usbtiny_paged_load, usbtiny_paged_write):
	fix breakage introduced by the recent page handling reorg;
	it used to cause an infinite loop

2012-05-04  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Xmega page erase implementation for XPROG (AVRISPmkII, STK600)
	* stk500v2.c (stk600_xprog_page_erase): New function.

2012-05-04  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Xmega page erase implementation for JTAGICEmkII
	* jtagmkII.c: Handle flash pages sizes > 256 bytes, implement
	page_erase() method
	* avrdude.conf.in: Change flash pagesize for all Xmega devices
	to 512 bytes
	* avr.c: Implement auto_erase, using page_erase if available
	* avr.h: Remove unused parameters from avr_read(), replace
	unused parameter in avr_write)() by auto_erase
	* stk500v2.c: Handle flash page sizes > 256 bytes
	* update.c (do_op): Handle new updateflags parameter
	* main.c: Implement auto_erase as page_erase if possible
	* update.h (enum updateflags): New enum
	* pgm.h (struct programmer_t): Add page_erase method

2012-04-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
